--- a/sui-echo-move/Move.toml
+++ b/sui-echo-move/Move.toml
@@ -1,9 +1,8 @@
 [package]
 name = "sui_echo"
-version = "0.0.1"
+edition = "2024"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
 sui_echo = "0x0"
